@@ -1,3 +1,8 @@
+2007-08-12  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/lib/gtkui/chessview.py: Fix another instance of bug #459740,
+	which causes crashes because pygtk made the tooltip style private.
+
 2007-06-11  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/gtkui/gtkui.py, dialogs.py: Gracefully handle not being able
